force-app/main/default/objects/Account/fields/Count_of_Booked_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Booked_Opportunities__c</fullName>
    <description>#26453:
 Gives Count of Closed WOn Opportunities Booked with CLose date in Last 2 Years</description>
    <label>Count of Booked Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.Booked_in_Past_2_Years__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>notEqual</operation>
        <value>Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>