force-app/main/default/objects/Account/fields/Count_of_Closed_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Closed_Won_Opportunities__c</fullName>
    <description>#26453: Gives COunt of Closed Won Opportunities under the Account</description>
    <label>Count of Closed Won Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>notEqual</operation>
        <value>Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>