force-app/main/default/objects/Account/fields/Count_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Contact__c</fullName>
    <description>Number of Contacts associated to this Account</description>
    <inlineHelpText>Number of Contacts associated to this Account</inlineHelpText>
    <label>Count of Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>