force-app/main/default/objects/Account/fields/Count_of_Red_Cids__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Red_Cids__c</fullName>
    <description>Count of customer accounts which are currently &quot;red.&quot;</description>
    <inlineHelpText>Count of customer accounts which are currently &quot;red.&quot;</inlineHelpText>
    <label>Count of Red CIDs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>