force-app/main/default/objects/Account/fields/Country_Parent_Formula__c.field-meta.xml
<CustomField>
    <fullName>Country_Parent_Formula__c</fullName>
    <formula>/* 
This formula will traverse the Account hierarchy from (including) current record all the way to the top (up to 6 levels) and will 
display the Name of the parent Account where IM_HIerarchy_Level__c field is &quot;Country Parent&quot;. 
If there is no such level parent in the hierarchy - will leave field blank 
*/ 


/* If No Parent AND this Record Hierarchy level IS NOT IMGA leave blank */ 
IF (LEN(ParentId)==0 &amp;&amp; TEXT( IM_Hierarchy_Level__c )!=&apos;Country Parent&apos;, &apos;&apos;, 

/*Else If No Parent AND this Record Hierarchy level IS IMGA use Name field from this record*/ 
IF ( TEXT( IM_Hierarchy_Level__c )==&apos;Country Parent&apos;, Name, 


/*Else If parent is IMGA-Level, get name from parent*/ 
IF(TEXT( Parent.IM_Hierarchy_Level__c )==&apos;Country Parent&apos;, Parent.Name, 

/*Else If second parent is IMGA-Level, get name from second parent*/ 
IF(TEXT( Parent.Parent.IM_Hierarchy_Level__c )==&apos;Country Parent&apos;, Parent.Parent.Name, 

/*Else If third parent is IMGA-Level, get name from third parent*/ 
IF(TEXT( Parent.Parent.Parent.IM_Hierarchy_Level__c )==&apos;Country Parent&apos;, Parent.Parent.Parent.Name, 

/*Else If fourth parent is IMGA-Level, get name from fourth parent*/ 
IF(TEXT( Parent.Parent.Parent.Parent.IM_Hierarchy_Level__c )==&apos;Country Parent&apos;, Parent.Parent.Parent.Parent.Name, 

/*Else If fifth parent is IMGA-Level, get name from fifth parent*/ 
IF(TEXT( Parent.Parent.Parent.Parent.Parent.IM_Hierarchy_Level__c )==&apos;Country Parent&apos;, 
Parent.Parent.Parent.Parent.Parent.Name, 

/*Else (when reached up six levels, if no IMGA-level parent found - then put blank.*/ 
&apos;&apos; ) 
) 
) 
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Parent</label>
    <type>Text</type>
</CustomField>