force-app/main/default/objects/Account/fields/CountryParentIDText__c.field-meta.xml
<CustomField>
    <fullName>CountryParentIDText__c</fullName>
    <externalId>true</externalId>
    <label>CountryParentIDText</label>
    <length>100</length>
    <type>Text</type>
</CustomField>