force-app/main/default/objects/Account/fields/Current_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Current_Vendor__c</fullName>
    <label>Current Vendor</label>
    <type>TextArea</type>
</CustomField>