force-app/main/default/objects/Account/fields/Current_Year_DBR_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_DBR_Revenue__c</fullName>
    <description>Invoiced revenue for Data Backup &amp; Recovery for the current calendar year.</description>
    <inlineHelpText>Invoiced revenue for Data Backup &amp; Recovery for the current calendar year.</inlineHelpText>
    <label>Current Year DBR Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>