force-app/main/default/objects/Account/fields/Current_Year_Red_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Red_Revenue__c</fullName>
    <description>Invoiced revenue from all &quot;red&quot; accounts for the current calendar year.</description>
    <inlineHelpText>Invoiced revenue from all &quot;red&quot; accounts for the current calendar year.</inlineHelpText>
    <label>Current Year Red Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>