force-app/main/default/objects/Account/fields/Current_Year_Shred_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Shred_Revenue__c</fullName>
    <description>Invoiced revenue for Secure Shredding for the current calendar year.</description>
    <inlineHelpText>Invoiced revenue for Secure Shredding for the current calendar year.</inlineHelpText>
    <label>Current Year Shred Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>