force-app/main/default/objects/Account/fields/Current_Year_Yellow_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Yellow_Revenue__c</fullName>
    <description>Invoiced revenue from all &quot;yellow&quot; customer accounts for the current calendar year.</description>
    <inlineHelpText>Invoiced revenue from all &quot;yellow&quot; customer accounts for the current calendar year.</inlineHelpText>
    <label>Current Year Yellow Revenue</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>