force-app/main/default/objects/Account/fields/Customers__c.field-meta.xml
<CustomField>
    <fullName>Customers__c</fullName>
    <description># of Customers range value for the Partner Type = Collaboration</description>
    <label># Customers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;500</fullName>
            </value>
            <value>
                <fullName>500-999</fullName>
            </value>
            <value>
                <fullName>1000-4999</fullName>
            </value>
            <value>
                <fullName>Other/Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>