force-app/main/default/objects/Account/fields/CY_Bookings_YTD__c.field-meta.xml
<CustomField>
    <fullName>CY_Bookings_YTD__c</fullName>
    <description>Conga mapping field</description>
    <label>CY Bookings YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>