force-app/main/default/objects/Account/fields/CY_New_Cubic_Feet_YTD__c.field-meta.xml
<CustomField>
    <fullName>CY_New_Cubic_Feet_YTD__c</fullName>
    <description>Conga mapping field</description>
    <label>CY New Cubic Feet YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>