force-app/main/default/objects/Account/fields/CY_Reciprocal_Spend__c.field-meta.xml
<CustomField>
    <fullName>CY_Reciprocal_Spend__c</fullName>
    <description>Populated from the Reciprocal Spend Report</description>
    <label>CY Reciprocal Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>