force-app/main/default/objects/Account/fields/CY_Total_Spend_All_Services__c.field-meta.xml
<CustomField>
    <fullName>CY_Total_Spend_All_Services__c</fullName>
    <label>CY Total Spend (All Services)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>