force-app/main/default/objects/Account/fields/CY_Total_Storage_DM__c.field-meta.xml
<CustomField>
    <fullName>CY_Total_Storage_DM__c</fullName>
    <label>CY Total Storage (DM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>