force-app/main/default/objects/Account/fields/D_B_Domestic_Ultimate_Revenue_USD__c.field-meta.xml
<CustomField>
    <fullName>D_B_Domestic_Ultimate_Revenue_USD__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.DU_Fins_yearlyRevenue_value__c</formula>
    <label>D&amp;B Domestic Ultimate Revenue (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>