force-app/main/default/objects/Account/fields/D_B_DUNS_Connect__c.field-meta.xml
<CustomField>
    <fullName>D_B_DUNS_Connect__c</fullName>
    <label>D&amp;B DUNS Connect</label>
    <length>20</length>
    <type>Text</type>
</CustomField>