force-app/main/default/objects/Account/fields/D_B_Employees_Here__c.field-meta.xml
<CustomField>
    <fullName>D_B_Employees_Here__c</fullName>
    <inlineHelpText>The number of employees at this location.</inlineHelpText>
    <label>D&amp;B Employees Here</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>