force-app/main/default/objects/Account/fields/D_B_Employees_Total__c.field-meta.xml
<CustomField>
    <fullName>D_B_Employees_Total__c</fullName>
    <inlineHelpText>The total number of employees in the business organization; it should include subsidiary and branch locations.</inlineHelpText>
    <label>D&amp;B Employees Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>