force-app/main/default/objects/Account/fields/D_B_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>D_B_Line_of_Business__c</fullName>
    <inlineHelpText>A narrative description of the operations or activities of the business. Relates to the primary four-digit 1987 US SIC.</inlineHelpText>
    <label>D&amp;B Line of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>