force-app/main/default/objects/Account/fields/D_B_MatchGrade__c.field-meta.xml
<CustomField>
    <fullName>D_B_MatchGrade__c</fullName>
    <inlineHelpText>MatchGrade provides a lettered similarity score between components of customer &amp; D&amp;B reference info. The components are: Business Name, Street Number, Street Name, City, State/Province, PO Box, Phone, Postal Code, Density, Uniqueness and Industry.</inlineHelpText>
    <label>D&amp;B MatchGrade</label>
    <length>20</length>
    <type>Text</type>
</CustomField>