force-app/main/default/objects/Account/fields/D_B_Number_of_Family_Members__c.field-meta.xml
<CustomField>
    <fullName>D_B_Number_of_Family_Members__c</fullName>
    <inlineHelpText>The number of family members including the global ultimate and all subsidiaries and branches of the entire family tree worldwide. All family members within a particular tree carry the same count.</inlineHelpText>
    <label>D&amp;B Number of Family Members</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>