force-app/main/default/objects/Account/fields/D_B_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>D_B_Postal_Code__c</fullName>
    <label>D&amp;B Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>