force-app/main/default/objects/Account/fields/D_B_Sales_Volume_USD__c.field-meta.xml
<CustomField>
    <fullName>D_B_Sales_Volume_USD__c</fullName>
    <inlineHelpText>The total annual sales/revenue for this business, expressed in US dollars.</inlineHelpText>
    <label>D&amp;B Sales Volume (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>