force-app/main/default/objects/Account/fields/D_B_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>D_B_Segmentation__c</fullName>
    <description>#26450 : Account: Create &quot;D&amp;B Segmentation&quot; field to enable data load of value from DNB.
#27541 - Update the field From D&amp;B Segmentation(Picklist type) to D&amp;B Segmentation (IMGA)</description>
    <label>D&amp;B Segmentation (IMGA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>