force-app/main/default/objects/Account/fields/D_B_Tradestyle_Name__c.field-meta.xml
<CustomField>
    <fullName>D_B_Tradestyle_Name__c</fullName>
    <inlineHelpText>A trading style name used by a business. It is an additional name used by a company. Also referred to as &quot;Doing Business As&quot; (DBA) and &quot;Also Known As&quot; (AKA).</inlineHelpText>
    <label>D&amp;B Tradestyle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>