force-app/main/default/objects/Account/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>IF( OR(Contains(Upper(Name),&apos;TEST&apos;),
       Contains(Name,&apos;$&apos;),
       Contains(Name,&apos;!&apos;),
       Contains(Name,&apos;?&apos;),
       Contains(Name,&apos;%&apos;),
       Contains(Upper(Name),&apos;SYSTEM USE ONLY&apos;)),20,0)+
IF( OR( LEN(BillingCity) = 0, LEN(BillingStreet) = 0, LEN(BillingCountry) = 0), 20,0)+
IF( LEN(Country_Parent_Formula__c) = 0, 20,0)+
IF( LEN(Website) = 0, 20,0)+
IF( ISPICKVAL(IM_Industry__c,&quot;&quot;), 20,0)</formula>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>