force-app/main/default/objects/Account/fields/DB_R_Coverage__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DB&amp;R Coverage</label>
    <type>Checkbox</type>
</CustomField>