force-app/main/default/objects/Account/fields/DBR_At_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>DBR_At_Risk_Score__c</fullName>
    <description>The risk assessment score for the Data Backup &amp; Recovery business line.</description>
    <inlineHelpText>The risk assessment score for the Data Backup &amp; Recovery business line.</inlineHelpText>
    <label>DBR At Risk Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>