force-app/main/default/objects/Account/fields/DBR_Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>DBR_Monthly_Value__c</fullName>
    <description>The monthly value of the Data Backup &amp; Recovery business line.</description>
    <inlineHelpText>The monthly value of the Data Backup &amp; Recovery business line.</inlineHelpText>
    <label>DBR Monthly Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>