force-app/main/default/objects/Account/fields/DBR_Reason_Code_1__c.field-meta.xml
<CustomField>
    <fullName>DBR_Reason_Code_1__c</fullName>
    <description>#1 reason attributed to why account is at risk, ranked in order of importance.</description>
    <inlineHelpText>#1 reason attributed to why account is at risk, ranked in order of importance.</inlineHelpText>
    <label>DBR Reason Code 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>