force-app/main/default/objects/Account/fields/DBR_Segment__c.field-meta.xml
<CustomField>
    <fullName>DBR_Segment__c</fullName>
    <inlineHelpText>High, Medium, or Low Risk 
Priority 3, Priority 2, or Priority 1 Ranking 
The combination provides another level of detail into the risk severity.</inlineHelpText>
    <label>DBR Segment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>