force-app/main/default/objects/Account/fields/DBR_Service__c.field-meta.xml
<CustomField>
    <fullName>DBR_Service__c</fullName>
    <inlineHelpText>This represents the percentage of risk attributed to this category code for this product line.</inlineHelpText>
    <label>DM Geography or Industry</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>