force-app/main/default/objects/Account/fields/DBR_Top_25__c.field-meta.xml
<CustomField>
    <fullName>DBR_Top_25__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DBR Top 25</label>
    <type>Checkbox</type>
</CustomField>