force-app/main/default/objects/Account/fields/DBU_AE_Intro_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>DBU_AE_Intro_Call_Date__c</fullName>
    <description>Gitlab # 36014</description>
    <label>DBU AE Intro Call Date</label>
    <type>Date</type>
</CustomField>