force-app/main/default/objects/Account/fields/DBU_Products__c.field-meta.xml
<CustomField>
    <fullName>DBU_Products__c</fullName>
    <description>34928 : Support Account Transition in PeopleGlass - DBU Products sold in Past 2 years, data loaded by SOps</description>
    <label>DBU Products</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>