force-app/main/default/objects/Account/fields/DBU_Strategic_Account__c.field-meta.xml
<CustomField>
    <fullName>DBU_Strategic_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#29142_Account: Sellers should be able to capture which Accounts are &apos;Strategic&apos; to support Account Plan (people.ai)</description>
    <label>DBU Strategic Account</label>
    <type>Checkbox</type>
</CustomField>