force-app/main/default/objects/Account/fields/DL_VC__JAM_Value_Cloud_Validated__c.field-meta.xml
<CustomField>
    <fullName>DL_VC__JAM_Value_Cloud_Validated__c</fullName>
    <formula>NOT( ISBLANK( DL_VC__VC_Company_Id__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Cloud Jamaica Validated</label>
    <type>Checkbox</type>
</CustomField>