force-app/main/default/objects/Account/fields/DL_VC__VC_Validated__c.field-meta.xml
<CustomField>
    <fullName>DL_VC__VC_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Value Cloud Validated</label>
    <type>Checkbox</type>
</CustomField>