force-app/main/default/objects/Account/fields/DL_VC__VC_Validated_Lookup__c.field-meta.xml
<CustomField>
    <fullName>DL_VC__VC_Validated_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value Cloud Validated</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>