force-app/main/default/objects/Account/fields/DM_Cloud_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>DM_Cloud_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#26660_ALM Business Unit Program Management Executive (PME). - Set at the Country Parent and cascades down to the Sales Site
#29959 Account: Relabel &quot;ALM PME(Program Management Executive)&quot; to &quot;ALM EAM&quot;</description>
    <label>ALM EAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsVwej</relationshipName>
    <type>Lookup</type>
</CustomField>