force-app/main/default/objects/Account/fields/DM_SourceSystem_Reference__c.field-meta.xml
<CustomField>
    <fullName>DM_SourceSystem_Reference__c</fullName>
    <description>External ID field for DM optimized process</description>
    <externalId>true</externalId>
    <label>Legacy SourceSystem Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>