force-app/main/default/objects/Account/fields/DM_Volume__c.field-meta.xml
<CustomField>
    <fullName>DM_Volume__c</fullName>
    <description>Conga mapping</description>
    <label>DM Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>