force-app/main/default/objects/Account/fields/DMS_Owner__c.field-meta.xml
<CustomField>
    <fullName>DMS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#26660_ALM Business Unit Solution Development Executive (SDE). - Set at the Country Parent and cascades down to the Sales Site
#29959 Account: Relabel &quot;ALM SDE(Solution Development Executive)&quot; to &quot;ALM VSE/SE&quot;
#35890- Update Account Coverage field labels according to new GTM strategy</description>
    <label>ALM VSE/SE/AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountslocG</relationshipName>
    <type>Lookup</type>
</CustomField>