force-app/main/default/objects/Account/fields/DMS_Owner_Formula__c.field-meta.xml
<CustomField>
    <fullName>DMS_Owner_Formula__c</fullName>
    <description>#26660: To copy data from Country Parent Account to Sales Site and this data is further used in AccountCoverageFieldsSync Apex job to update Text field(DMS_Owner__c)
#31465: Data should not be wiped off on Orphan Sales Site Accounts</description>
    <formula>IF(
/*If Account is Country Parent, stores DMS_Owner__c value */
ISPICKVAL(IM_Hierarchy_Level__c, &apos;Country Parent&apos;), DMS_Owner__c ,
IF(
/*If Account is Sales site, stores Country Parent Account&apos;s DMS_Owner__c by traversing one level up the hierarchy*/
AND(ISPICKVAL(IM_Hierarchy_Level__c, &apos;Sales (Site)&apos;),NOT(ISBLANK(ParentId))), Parent.DMS_Owner__c,DMS_Owner__c))</formula>
    <label>ALM SDE (Formula)</label>
    <type>Text</type>
</CustomField>