force-app/main/default/objects/Account/fields/DnB_Address_1__c.field-meta.xml
<CustomField>
    <fullName>DnB_Address_1__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.primAddr_streetAddr_line1__c</formula>
    <inlineHelpText>The address number, or post office box number, and street name where the business is located.</inlineHelpText>
    <label>D&amp;B Address 1</label>
    <type>Text</type>
</CustomField>