force-app/main/default/objects/Account/fields/DnB_Alternate_Name__c.field-meta.xml
<CustomField>
    <fullName>DnB_Alternate_Name__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.HQ_PrimName__c</formula>
    <inlineHelpText>The name which an organization trades under for commercial purposes although its registered legal name used for contracts and other formal situations may be another name.</inlineHelpText>
    <label>D&amp;B Alternate Name</label>
    <type>Text</type>
</CustomField>