force-app/main/default/objects/Account/fields/DnB_City__c.field-meta.xml
<CustomField>
    <fullName>DnB_City__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.primAddr_AddrLocal_name__c</formula>
    <inlineHelpText>The name of the city where the business is physically located. Generally in local language.</inlineHelpText>
    <label>D&amp;B City/Locality</label>
    <type>Text</type>
</CustomField>