force-app/main/default/objects/Account/fields/DnB_Country__c.field-meta.xml
<CustomField>
    <fullName>DnB_Country__c</fullName>
    <formula>IF(DNBConnect__D_B_Connect_Company_Profile__r.primAddr_Cntry_name__c = &apos;Republic Of Korea&apos;, &apos;South Korea&apos;, DNBConnect__D_B_Connect_Company_Profile__r.primAddr_Cntry_name__c)</formula>
    <inlineHelpText>The two-letter country code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country of the business entity.</inlineHelpText>
    <label>D&amp;B Country</label>
    <type>Text</type>
</CustomField>