force-app/main/default/objects/Account/fields/DnB_County__c.field-meta.xml
<CustomField>
    <fullName>DnB_County__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.primAddr_AddrCnty_name__c</formula>
    <inlineHelpText>The name of the county where the business is physically located</inlineHelpText>
    <label>D&amp;B County</label>
    <type>Text</type>
</CustomField>